# GEMINI_HULK

./: .env  Dockerfile  README.md  agent.py  langgraph.json  pyproject.toml  test.ipynb  test_curl_command.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
gemini_hulk/: agent.py  agent_db.py  test.ipynb
gemini_hulk/utils/: env_variables.py  prompt.py  tools copy.py  tools.py
